--- a/KGEmbedding/kge_handson.ipynb
+++ b/KGEmbedding/kge_handson.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Tutorial on KGE models and Link Prediction"
+    "# Empowering Healthcare with Symbolic Learning and Knowledge Graph Embeddings"
    ],
    "metadata": {
     "collapsed": false
@@ -13,7 +13,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Overview: Welcome!!! Today we will play with KGE models like TransH or RotatE over the Lung Cancer KG. In Lung Cancer KG, a patient is described by medical characteristics such as smoking habit, cancer stage, mutation type, age, gender and occurence of relapse etc. Here, the task is to predict a patient with recommended drug or relapse condition."
+    "### Overview: Welcome!!! Today we will play with Symbolic learning and KGE models like TransH or RotatE over the Lung Cancer KG. In Lung Cancer KG, a patient is described by medical characteristics such as smoking habit, cancer stage, mutation type, age, gender and occurence of relapse etc. Here, the task is to predict a patient with recommended drug or relapse condition."
    ],
    "metadata": {
     "collapsed": false
@@ -45,7 +45,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "!pip install pykeen"
+    "!pip install -r requirements.txt"
    ],
    "metadata": {
     "collapsed": false
@@ -55,7 +55,29 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Script for executing KGE models"
+    "#### Symbolic Learning Execution"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "74c6b8904f911f5a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "%cd SymbolicLearning\n",
+    "!python symbolic_predictions.py"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "a3535eb476338fa7"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### KGE Models Execution"
    ],
    "metadata": {
     "collapsed": false
@@ -66,6 +88,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "%cd ./KGEmbedding \n",
     "!python kge.py --dataset_path \"/content/SymbolicLearning_KGE/KG/OriginalKG/LungCancer.tsv\" --output_dir \"OriginalKG\" --results_path \"OriginalKG/\" --models TransH"
    ],
    "metadata": {
@@ -76,7 +99,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Script to predict the missing link, i.e., tail or head entity"
+    "#### Perform Link Prediction (to predict the missing link, i.e., tail or head entity)"
    ],
    "metadata": {
     "collapsed": false
@@ -99,16 +122,65 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import json\n",
     "pred_result_path = \"OriginalKG/TransH/prediction_result.csv\"\n",
     "pred = pd.read_csv(pred_result_path)\n",
     "\n",
-    "# Display the prediction result\n",
+    "# Display the prediction result, i.e., top-5\n",
     "pred.head(5)"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "dae3bf88c8931da6"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### KGE Model Evaluation"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "faa47ebbffcfa640"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def generate_dataframe(model_name, file_path):\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        data = json.load(file)\n",
+    "\n",
+    "    hits_at_10 = data['tail']['realistic']['Hits@10']\n",
+    "    mrr = data['tail']['realistic']['MRR']\n",
+    "\n",
+    "    df = pd.DataFrame({\n",
+    "        'Model': [model_name],\n",
+    "        'Hits@10': [hits_at_10],\n",
+    "        'MRR': [mrr]\n",
+    "    })\n",
+    "    return df\n",
+    "\n",
+    "model_files = [\n",
+    "    ('TransH', 'OriginalKG/TransH/results.json'),\n",
+    "    ('TransH', 'EnrichedKG/TransH/results.json'),\n",
+    "    ('TransH', 'TransformedKG/TransH/results.json')\n",
+    "]\n",
+    "\n",
+    "dfs = []\n",
+    "for model_name, file_path in model_files:\n",
+    "    df = generate_dataframe(model_name, file_path)\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "# Concatenate all DataFrames into one\n",
+    "final_df = pd.concat(dfs, ignore_index=True)\n",
+    "print(final_df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "66f26457922d98ee"
   }
  ],
  "metadata": {
