--- a/KGEmbedding/kge_handson.ipynb
+++ b/KGEmbedding/kge_handson.ipynb
@@ -45,7 +45,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "!pip install -r requirements.txt"
+    "%%capture\n",
+    "!pip install -r /content/SymbolicLearning_KGE/requirements.txt"
    ],
    "metadata": {
     "collapsed": false
@@ -66,7 +67,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "%cd SymbolicLearning\n",
+    "%cd /content/SymbolicLearning_KGE/SymbolicLearning\n",
     "!python symbolic_predictions.py"
    ],
    "metadata": {
@@ -88,8 +89,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "%cd ./KGEmbedding \n",
-    "!python kge.py --dataset_path \"/content/SymbolicLearning_KGE/KG/OriginalKG/LungCancer.tsv\" --output_dir \"OriginalKG\" --results_path \"OriginalKG/\" --models TransH"
+    "!python SymbolicLearning_KGE/KGEmbedding/kge.py --dataset_path \"/content/SymbolicLearning_KGE/KG/OriginalKG/LungCancer.tsv\" --output_dir \"/content/SymbolicLearning_KGE/KGEmbedding/OriginalKG\" --results_path \"/content/SymbolicLearning_KGE/KGEmbedding/OriginalKG/\" --models TransH"
    ],
    "metadata": {
     "collapsed": false
@@ -110,7 +110,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "!python link_prediction.py --results \"OriginalKG/\" --model_name \"TransH\" --head \"3561_Patient\" --relation \"hasRelapse_Progression\""
+    "!python SymbolicLearning_KGE/KGEmbedding/link_prediction.py --results \"SymbolicLearning_KGE/KGEmbedding/OriginalKG/\" --model_name \"TransH\" --head \"3561_Patient\" --relation \"hasRelapse_Progression\""
    ],
    "metadata": {
     "collapsed": false
@@ -123,7 +123,7 @@
    "source": [
     "import pandas as pd\n",
     "import json\n",
-    "pred_result_path = \"OriginalKG/TransH/prediction_result.csv\"\n",
+    "pred_result_path = \"SymbolicLearning_KGE/KGEmbedding/OriginalKG/TransH/prediction_result.csv\"\n",
     "pred = pd.read_csv(pred_result_path)\n",
     "\n",
     "# Display the prediction result, i.e., top-5\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### KGE Model Evaluation"
+    "#### Impact of Symbolic Learning over KGE Model Evaluation"
    ],
    "metadata": {
     "collapsed": false
@@ -152,25 +152,25 @@
     "    with open(file_path, 'r') as file:\n",
     "        data = json.load(file)\n",
     "\n",
-    "    hits_at_10 = data['tail']['realistic']['Hits@10']\n",
-    "    mrr = data['tail']['realistic']['MRR']\n",
+    "    hits_at_10 = data['metrics']['tail']['realistic']['hits_at_10']\n",
+    "    mrr = data['metrics']['tail']['realistic']['inverse_harmonic_mean_rank']\n",
     "\n",
     "    df = pd.DataFrame({\n",
-    "        'Model': [model_name],\n",
+    "        'Benchmark': [kg_name],\n",
     "        'Hits@10': [hits_at_10],\n",
     "        'MRR': [mrr]\n",
     "    })\n",
     "    return df\n",
     "\n",
     "model_files = [\n",
-    "    ('TransH', 'OriginalKG/TransH/results.json'),\n",
-    "    ('TransH', 'EnrichedKG/TransH/results.json'),\n",
-    "    ('TransH', 'TransformedKG/TransH/results.json')\n",
+    "    ('OriginalKG', 'SymbolicLearning_KGE/KGEmbedding/OriginalKG/TransH/results.json'),\n",
+    "    ('EnrichedKG', 'SymbolicLearning_KGE/KGEmbedding/EnrichedKG/TransH/results.json'),\n",
+    "    ('TransformedKG', 'SymbolicLearning_KGE/KGEmbedding/TransformedKG/TransH/results.json')\n",
     "]\n",
     "\n",
     "dfs = []\n",
-    "for model_name, file_path in model_files:\n",
-    "    df = generate_dataframe(model_name, file_path)\n",
+    "for kg_name, file_path in model_files:\n",
+    "    df = generate_dataframe(kg_name, file_path)\n",
     "    dfs.append(df)\n",
     "\n",
     "# Concatenate all DataFrames into one\n",
