--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b4c2a52",
+   "id": "490613c0",
    "metadata": {},
    "source": [
     "**Build SemEP project**"
@@ -269,7 +269,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(kg_name, model_list[0], threshold[1])\n",
     "PatternAnalysis.PCA_projection(kg_name, model_list[0], threshold[1])\n",
+    "print(kg_name, model_list[1], threshold[3])\n",
     "PatternAnalysis.PCA_projection(kg_name, model_list[1], threshold[3])"
    ]
   },
@@ -288,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target_cls = PatternAnalysis.target_cluster(kg_name, model_list[1], target_predicate, cls_algorithm='SemEP', threshold[3])\n",
+    "target_cls = PatternAnalysis.target_cluster(kg_name, model_list[1], target_predicate, cls_algorithm='SemEP', th=threshold[3])\n",
     "display(target_cls.head(), target_cls.shape)"
    ]
   },
