--- a/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
+++ b/PatternDetection/UnsupervisedLearning_Hands-on.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = ['EnrichedKG', 'OriginalKG', 'TransformedKG']\n",
+    "name = ['OriginalKG', 'EnrichedKG', 'TransformedKG']\n",
     "\n",
     "kg_name = name[]\n",
     "StatisticKG.plot_statistics(kg_name)"
